# rust-api

./: Cargo.toml
migrations/: 20260313093959_create_tasks_table.sql
src/: main.rs
